# exoplanet-search

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
data/interim/: kepler5_phase1b_stellar_inputs.json
src/exoplanet_search/: cli.py  config.py  data_access.py  diagnostics.py  inspection.py  phase1a.py  phase1b.py  phase1b_fit.py  phase1b_model.py  phase1b_observations.py  phase1b_outputs.py  phase1b_types.py  phase1c.py  phase1c_diagnostics.py  phase1c_inputs.py  phase1c_likelihood.py  phase1c_outputs.py  phase1c_parameters.py  phase1c_sampler.py  phase1c_synthetic.py  phase1c_types.py  phase1d.py  phase1d_draws.py  phase1d_predictive.py  preprocessing.py  provenance.py  recovery.py
tests/: test_cli.py  test_inspection.py  test_phase1a.py  test_phase1b.py  test_phase1c.py  test_phase1c_emcee_diagnostics.py  test_phase1c_initialization.py  test_phase1c_likelihood_context.py  test_phase1c_parallel.py  test_phase1c_realistic_recovery.py  test_phase1c_sampler_configuration.py  test_phase1d.py  test_preprocessing.py  test_provenance.py  test_recovery.py  test_smoke.py
