[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-search"
version = "0.1.0"
description = "Validate a transit-search and fitting pipeline by rediscovering known exoplanets in Kepler data."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Josh Kalk" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "astropy>=6.0",
  "lightkurve>=2.5",
  "batman-package>=2.4.9",
]


[project.scripts]
kepler5-inspect = "exoplanet_search.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
